tests/misc/errors/less/inline-comment.js
// Less parser don't support inline comment before colon

a{
	prop
// inline
:
value;
}
